fix scrolling in LIST views
use webkit-scrollbar to remove scrollbar

--- a/src/css/components/_v-scroll-menu.scss
+++ b/src/css/components/_v-scroll-menu.scss
@@ -1,8 +1,9 @@
 .vscrollmenu {
     width: 100%;
     height: $master-height - 75px;
-    overflow: hidden;
-    .div {
-        overflow-y: scroll;
-    }
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
